--- a/Resources/xib/BeintooViewController.xib
+++ b/Resources/xib/BeintooViewController.xib
@@ -44,6 +44,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 255}, {140, 40}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="781220394"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="374575456">
 							<int key="NSColorSpace">3</int>
@@ -85,6 +86,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{170, 255}, {140, 40}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<reference key="IBUIBackgroundColor" ref="374575456"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -120,6 +122,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 48}, {120, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="427881198"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="428403227">
 							<int key="NSColorSpace">2</int>
@@ -141,6 +144,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 114}, {170, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="980832420"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="23373406">
 							<int key="NSColorSpace">1</int>
@@ -162,6 +166,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 147}, {170, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="169768231"/>
 						<reference key="IBUIBackgroundColor" ref="23373406"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -180,6 +185,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 81}, {170, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="324467331"/>
 						<reference key="IBUIBackgroundColor" ref="23373406"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -198,6 +204,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 15}, {120, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="965612961"/>
 						<reference key="IBUIBackgroundColor" ref="23373406"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -216,6 +223,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{237, 15}, {75, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="53893643"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -237,6 +245,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 180}, {120, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="311219959"/>
 						<reference key="IBUIBackgroundColor" ref="23373406"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -258,6 +267,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{237, 114}, {74, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1006988218"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="355811664">
 							<int key="NSColorSpace">1</int>
@@ -279,6 +289,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{237, 147}, {74, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="632206757"/>
 						<reference key="IBUIBackgroundColor" ref="355811664"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -297,6 +308,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{237, 179}, {74, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="168278326"/>
 						<reference key="IBUIBackgroundColor" ref="355811664"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -315,6 +327,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{219, 123}, {10, 10}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="63941690"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="981915817">
 							<int key="NSColorSpace">1</int>
@@ -327,6 +340,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{219, 123}, {10, 10}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="482954504"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -339,6 +353,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{219, 156}, {10, 10}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="96598770"/>
 						<reference key="IBUIBackgroundColor" ref="981915817"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -348,6 +363,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{219, 156}, {10, 10}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="665498537"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -360,6 +376,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{219, 188}, {10, 10}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="384675449"/>
 						<reference key="IBUIBackgroundColor" ref="981915817"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -369,6 +386,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{219, 188}, {10, 10}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="921504403"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -381,6 +399,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{173, 48}, {140, 28}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="927950605"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="428403227"/>
@@ -405,6 +424,7 @@
 				</object>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="498145007"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -922,9 +942,275 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">177</int>
+			<int key="maxID">181</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">BButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/BButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">BeintooViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>getScoreForContest</string>
+							<string>getVgood</string>
+							<string>giveBedollars</string>
+							<string>playerLogin</string>
+							<string>playerLogout</string>
+							<string>setLondon</string>
+							<string>setMilan</string>
+							<string>setSanFrancisco</string>
+							<string>startBeintoo</string>
+							<string>startMarketplace</string>
+							<string>submitAchievement</string>
+							<string>submitScore</string>
+							<string>submitScoreForContest</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>getScoreForContest</string>
+							<string>getVgood</string>
+							<string>giveBedollars</string>
+							<string>playerLogin</string>
+							<string>playerLogout</string>
+							<string>setLondon</string>
+							<string>setMilan</string>
+							<string>setSanFrancisco</string>
+							<string>startBeintoo</string>
+							<string>startMarketplace</string>
+							<string>submitAchievement</string>
+							<string>submitScore</string>
+							<string>submitScoreForContest</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">getScoreForContest</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">getVgood</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">giveBedollars</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">playerLogin</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">playerLogout</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">setLondon</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">setMilan</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">setSanFrancisco</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">startBeintoo</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">startMarketplace</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">submitAchievement</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">submitScore</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">submitScoreForContest</string>
+								<string key="candidateClassName">id</string>
+							</object>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>achievements</string>
+							<string>getScoreForContest</string>
+							<string>getVgood</string>
+							<string>giveBedollars</string>
+							<string>greenLondon</string>
+							<string>greenMilan</string>
+							<string>greenSanFrancisco</string>
+							<string>logout</string>
+							<string>london</string>
+							<string>milan</string>
+							<string>playerLogin</string>
+							<string>redLondon</string>
+							<string>redMilan</string>
+							<string>redSanFrancisco</string>
+							<string>sanFrancisco</string>
+							<string>submitScore</string>
+							<string>submitScoreForContest</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>BButton</string>
+							<string>BButton</string>
+							<string>BButton</string>
+							<string>BButton</string>
+							<string>UIView</string>
+							<string>UIView</string>
+							<string>UIView</string>
+							<string>BButton</string>
+							<string>BButton</string>
+							<string>BButton</string>
+							<string>BButton</string>
+							<string>UIView</string>
+							<string>UIView</string>
+							<string>UIView</string>
+							<string>BButton</string>
+							<string>BButton</string>
+							<string>BButton</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>achievements</string>
+							<string>getScoreForContest</string>
+							<string>getVgood</string>
+							<string>giveBedollars</string>
+							<string>greenLondon</string>
+							<string>greenMilan</string>
+							<string>greenSanFrancisco</string>
+							<string>logout</string>
+							<string>london</string>
+							<string>milan</string>
+							<string>playerLogin</string>
+							<string>redLondon</string>
+							<string>redMilan</string>
+							<string>redSanFrancisco</string>
+							<string>sanFrancisco</string>
+							<string>submitScore</string>
+							<string>submitScoreForContest</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">achievements</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">getScoreForContest</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">getVgood</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">giveBedollars</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">greenLondon</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">greenMilan</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">greenSanFrancisco</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">logout</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">london</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">milan</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">playerLogin</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">redLondon</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">redMilan</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">redSanFrancisco</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">sanFrancisco</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">submitScore</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">submitScoreForContest</string>
+								<string key="candidateClassName">BButton</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/BeintooViewController.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
